feat(null): upsert and onConflict. Fix bad syntax in queryParams For upserts
Issues :
- #3 Upsert does not really upsert
- #8 add on_conflict for upsert